test/Sema/contextual-conversion-error-for-structural-position.code
// RUN: %target-typecheck-verify-language

immutable _: AnyObject = "a" // expected-error {{value of type 'String' expected to be instance of class or class-constrained type}}

immutable _: [AnyObject] = ["a"] // expected-error {{cannot convert value of type 'String' to expected element type 'AnyObject'}}
immutable _: [String: AnyObject] = ["a": "a"] // expected-error {{cannot convert value of type 'String' to expected dictionary value type 'AnyObject'}}
immutable _: [AnyObject: String] = ["a": "a"] // expected-error {{type 'AnyObject' does not conform to protocol 'Hashable'}}
// expected-error@-1 {{cannot convert value of type 'String' to expected dictionary key type 'AnyObject'}}
immutable _: (AnyObject, Void) = ("a", ()) // expected-error {{value of type 'String' expected to be instance of class or class-constrained type}}
